# Altina

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  COMMIT_MSG.txt  INITIAL_COMMIT_MSG.txt  MEMO.md  README.md  Start-VSCode-MSVC.ps1  TODO.md  vcpkg-configuration.json  vcpkg.json
Demo/Minimal/: CMakeLists.txt
Demo/Minimal/Assets/Levels/: Default.level
Demo/Minimal/Assets/Materials/: Floor.material  PurpleDeferred.material
Demo/Minimal/Assets/Scripts/: DemoScript.script
Demo/Minimal/Assets/Shaders/: BasicDeferred.hlsl
Demo/Minimal/Config/: DefaultGame.json  EditorProject.json
Demo/Minimal/Source/: Main.cpp  MinimalDemoModule.cpp
Demo/SpaceshipGame/: CMakeLists.txt
Demo/SpaceshipGame/Assets/Materials/: Earth.material  MetalBall.material  Moon.material  OrbitLine.material  Ship.material  Sun.material
Demo/SpaceshipGame/Assets/Models/: Apollo.usdz  Earth.usdz  EarthSimple.usdz  Moon.usdz  Sun.usdz
Demo/SpaceshipGame/Assets/Scripts/: EarthRevolve.script  FpsCamera.script  FpsCameraFollow.script  MoonRevolve.script  ShipCameraModes.script  ShipFreeMove.script  ShipOrbit.script
Demo/SpaceshipGame/Assets/Shaders/: BasicDeferred.hlsl
Demo/SpaceshipGame/Assets/Sky/: ChurchMeetingRoom4k.exr  Nebulae.hdr
Demo/SpaceshipGame/Config/: DefaultGame.json
Demo/SpaceshipGame/Misc/OrbitPrototype/: orbit_prototype.py  requirements.txt
Demo/SpaceshipGame/Source/: Main.cpp
Demo/SpaceshipGame/Source/NativeScripts/: CelestialMotion.h  ShipCameraModesNative.cpp  ShipCameraModesNative.h  ShipOrbitControllerNative.cpp  ShipOrbitControllerNative.h  SpaceshipConstants.h  SpaceshipGlobals.h  SpaceshipMath.h  SpaceshipNativeContext.cpp  SpaceshipNativeContext.h  SpaceshipNativeScripts.cpp  SpaceshipNativeScripts.h
Source/Editor/Core/: CMakeLists.txt
Source/Editor/Host/: CMakeLists.txt
Source/Editor/Host/Private/: EditorMain.cpp
Source/Editor/Viewport/: CMakeLists.txt
Source/Engine/Launch/: CMakeLists.txt
Source/Engine/Rhi.General/: CMakeLists.txt
Source/Engine/Rhi.General/Private/: RhiAdapter.cpp  RhiCmdContextOps.cpp  RhiContext.cpp  RhiDevice.cpp  RhiInit.cpp  RhiModule.cpp  RhiQueue.cpp  RhiResource.cpp  RhiResourceDeleteQueue.cpp  RhiResources.cpp
Source/Engine/Rhi.General/Public/: RhiGeneralAPI.h  RhiModule.h
Source/Engine/ShaderCompiler/: CMakeLists.txt
Source/Engine/ShaderCompiler/Private/: DxcCompiler.cpp  ShaderAutoBinding.cpp  ShaderAutoBinding.h  ShaderCompilerBackend.h  ShaderCompilerModule.cpp  ShaderCompilerUtils.cpp  ShaderCompilerUtils.h  ShaderPermutationParser.cpp  ShaderRhiBindings.cpp  SlangCompiler.cpp
Source/Runtime/Asset/: CMakeLists.txt
Source/Runtime/Asset/Private/: AssetBundle.cpp  AssetManager.cpp  AssetRegistry.cpp  AssetTypesSerialization.cpp  AudioLoader.cpp  CubeMapAsset.cpp  CubeMapLoader.cpp  LevelAsset.cpp  LevelLoader.cpp  MaterialAsset.cpp  MaterialLoader.cpp  MeshAsset.cpp  MeshLoader.cpp  MeshMaterialParameterBlock.cpp  ModelAsset.cpp  ModelAssetLoader.cpp  ModelLoader.cpp  ScriptLoader.cpp  ShaderAsset.cpp  ShaderLoader.cpp  Texture2DAsset.cpp  Texture2DLoader.cpp
Source/Runtime/Asset/Public/: AssetAPI.h
Source/Runtime/Rhi.Vulkan/: CMakeLists.txt
Source/Runtime/Rhi.Vulkan/Private/: RhiVulkanBackend.cpp  RhiVulkanBackend.h  RhiVulkanCommand.cpp  RhiVulkanCommon.h  RhiVulkanContext.cpp  RhiVulkanDebugUtils.cpp  RhiVulkanDebugUtils.h  RhiVulkanDescriptorAllocator.cpp  RhiVulkanDescriptorAllocator.h  RhiVulkanDevice.cpp  RhiVulkanDeviceCaps.cpp  (+11 more)
Source/Runtime/Scripting.CoreCLR/: CMakeLists.txt
Source/Tests/: CMakeLists.txt  RefTests.cpp  RhiD3D11Tests.cpp  RhiMockTests.cpp  ShaderCompilerTests.cpp  TestHarness.h  TestMain.cpp
Source/Tests/Asset/: AssetLoaderTests.cpp  CubeMapLoaderTests.cpp  MeshMaterialParameterBlockSerializationTests.cpp
Source/Tests/Core/: ArrayTests.cpp  CommonMathTests.cpp  ComparatorTests.cpp  CompileTime.cpp  ConsoleVariableTests.cpp  ContainerTests.cpp  InertiaTensorTests.cpp  InstrumentationTests.cpp  JobSystemTests.cpp  LinAlgDeterminantTests.cpp  LinAlgInverseTests.cpp  LogTests.cpp  MatrixTests.cpp  NamedThreadTests.cpp  PlatformTests.cpp  RangeTests.cpp  SmartPtrTests.cpp  SpanTests.cpp  StringTests.cpp  TFunctionTests.cpp  ThreadSafeContainersTests.cpp  ThreadingTests.cpp  TupleTests.cpp  TypeMetaTests.cpp  TypesTests.cpp  VectorContainerTests.cpp  VectorTests.cpp  WorkerThreadNameTests.cpp
Source/Tests/DebugGui/: DebugGuiSystemTests.cpp
Source/Tests/Editor/: EditorProjectServiceTests.cpp  EditorUiModuleTests.cpp
Source/Tests/GameScene/: GameSceneWorldTests.cpp  NativeScriptComponentTests.cpp  PbrSkyComponentTests.cpp  PrefabRegistryTests.cpp  PrefabWorldSerializationTests.cpp  SceneBatchingTests.cpp  ScriptComponentRegistryTests.cpp  SkyCubeComponentRhiTests.cpp  SkyCubeComponentTests.cpp  StaticMeshFilterProceduralTests.cpp  WorldDeserializationTests.cpp  WorldLevelAssetTests.cpp  WorldSerializationJsonTests.cpp  WorldSerializationTests.cpp
Source/Tests/Gameplay/: GameplayWorldTests.cpp
Source/Tests/GeometryProcessing/: GeometryProcessingModuleTests.cpp
Source/Tests/Imaging/: ImageCodecTests.cpp
Source/Tests/Launch/: RuntimeHostTests.cpp
Source/Tests/Reflection/: ComplexInheritanceTests.cpp  ObjectTests.cpp  ReflectionAdvancedTests.cpp  ReflectionTestCommon.cpp  ReflectionTestCommon.h  ReflectionTests.cpp  VirtualDiamondInheritanceTests.cpp
Source/Tests/RenderCore/: FrameGraphTests.cpp  MaterialParameterBlockSerializationTests.cpp  ShaderBindingUtilityTests.cpp  ShaderRegistryTests.cpp  StaticMeshVertexFactoryTests.cpp  TemporalJitterTests.cpp  VertexLayoutBuilderTests.cpp
Source/Tests/Rendering/: RendererPassFrameworkTests.cpp
Source/Tests/ShaderCompiler/: ShaderCompilerTests.cpp  ShaderPermutationTests.cpp
Source/Tests/Shared/: TestHarness.h
Source/Tools/AssetPipeline/: CMakeLists.txt
Source/Tools/DemoLauncher/: CMakeLists.txt
Source/Tools/ProjectGenerator/: CMakeLists.txt  README.md
Source/Tools/ReflectionScanner/: CMakeLists.txt
Test/: CMakeLists.txt  main.cpp
(+958 files in other folders)
